--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 #question {
-    font-family: 'Trebuchet MS'; /* Apply Sacramento font to the question */
+    font-family: 'Comic Sans MS'; /* Apply Sacramento font to the question */
     font-size: 52px; /* Set font size for the question */
 }
 
@@ -30,7 +30,7 @@ button {
     padding: 10px 20px; /* Set padding for buttons */
     margin: 0 10px; /* Set margin around buttons */
     font-size: 26px; /* Set font size for buttons */
-    font-family: 'Trebuchet MS'; /* Apply Sacramento font to the options */
+    font-family: 'Comic Sans MS'; /* Apply Sacramento font to the options */
     background-color: #f74a29; /* Set button background color */
     color: white; /* Set text color to white */
     border: none; /* Remove button border */
